fixed overlapping issue

--- a/src/containers/checkout/component/gift.scss
+++ b/src/containers/checkout/component/gift.scss
@@ -555,6 +555,7 @@
     top: 48px;
     left: 0px;
     width: 100%;
+    z-index: 1;
   }
 }
 
